# clashrs-ctl

./: .gitignore  Cargo.toml  PKGBUILD  README.md  clash-profile  clash-profile.reload
src/: config.rs  connection.rs  lib.rs  proxy.rs  rule.rs  stream.rs  version.rs
src/stream/: log.rs  traffic.rs
