[package]
name = "clashrsctl-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["stream"] }
async-trait = "0.1.58"
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"]}

