[package]
name = "clashrsctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["stream"] }
async-trait = "0.1.58"
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "macros"]}
futures = "0.3"
bytes = "1.1.0"

path-absolutize = "3.0.14"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }

clap = { version = "4.0.18", features = ["derive"] }
urlencoding = "2.1.2"
